--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 name="phone-nomber"
               />
               <svg class="modul-svg" width="18px" height="18px">
-                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
           </div>
@@ -443,11 +443,16 @@
                 name="email-user"
               />
               <svg class="modul-svg" width="18px" height="18px">
-                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
-          <textarea></textarea>
+          <div class="modal-box">
+            <label class="modul-label">Comment</label>
+            <div class="modul-div">
+              <textarea class="area-commet" placeholder="Text input"></textarea>
+            </div>
+          </div>
           <p class="Modul-comment">
             <input type="checkbox" id="check" />
             I accept the terms and conditions of the
