--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             </div>
           </div>
           <p class="Modul-comment">
-            <input type="checkbox" id="check" />
+            <input class="modal-check" type="checkbox" id="check" />
             I accept the terms and conditions of the
             <a class="modul-policy" href=""> Privacy Policy</a>
           </p>
