--- a/index.html
+++ b/index.html
@@ -393,6 +393,21 @@
             </li>
           </ul>
         </div>
+        <div class="footer-input-box">
+          <p class="par_foot">Subscribe</p>
+          <div class="footer-div">
+            <input
+              class="footer-input"
+              type="email"
+              name="Emeil-name"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="footer-button">Subscribe</button>
+            <svg class="footer-svg" width="24px" height="24px">
+              <use href="./images/icons.svg#icon-Frame-3"></use>
+            </svg>
+          </div>
+        </div>
       </div>
     </footer>
     <div class="modal_window is-hidden" data-modal>
