--- a/index.html
+++ b/index.html
@@ -394,19 +394,21 @@
           </ul>
         </div>
         <div class="footer-input-box">
-          <p class="par_foot">Subscribe</p>
-          <div class="footer-div">
-            <input
-              class="footer-input"
-              type="email"
-              name="Emeil-name"
-              placeholder="E-mail"
-            />
-            <button type="submit" class="footer-button">Subscribe</button>
-            <svg class="footer-svg" width="24px" height="24px">
-              <use href="./images/icons.svg#icon-Frame-3"></use>
-            </svg>
-          </div>
+          <form class="footer-form">
+            <p class="par_foot">Subscribe</p>
+            <div class="footer-div">
+              <input
+                class="footer-input"
+                type="email"
+                name="Emeil-name"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="footer-button">Subscribe</button>
+              <svg class="footer-svg" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
