--- a/index.html
+++ b/index.html
@@ -397,12 +397,14 @@
           <p class="par_foot">Subscribe</p>
 
           <form class="footer-form">
-            <input
-              class="footer-input"
-              type="email"
-              name="Emeil-name"
-              placeholder="E-mail"
-            />
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="Emeil-name"
+                placeholder="E-mail"
+              />
+            </label>
             <button type="submit" class="footer-button">Subscribe</button>
             <svg class="footer-svg" width="24px" height="24px">
               <use href="./images/icons.svg#icon-Frame-3"></use>
