--- a/index.html
+++ b/index.html
@@ -401,14 +401,16 @@
               <input
                 class="footer-input"
                 type="email"
-                name="Emeil-name"
+                name="Emeil"
                 placeholder="E-mail"
               />
             </label>
-            <button type="submit" class="footer-button">Subscribe</button>
-            <svg class="footer-svg" width="24px" height="24px">
-              <use href="./images/icons.svg#icon-Frame-3"></use>
-            </svg>
+            <button type="submit" class="footer-button">
+              Subscribe
+              <svg class="footer-svg" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
