--- a/index.html
+++ b/index.html
@@ -401,13 +401,13 @@
               <input
                 class="footer-input"
                 type="email"
-                name="Emeil"
+                name="emeill"
                 placeholder="E-mail"
               />
             </label>
             <button type="submit" class="footer-button">
               Subscribe
-              <svg class="footer-svg" width="24px" height="24px">
+              <svg class="footer-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-Frame-3"></use>
               </svg>
             </button>
