--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               <input
                 class="footer-input"
                 type="email"
-                name="emeill"
+                name="ustal"
                 placeholder="E-mail"
               />
             </label>
