--- a/index.html
+++ b/index.html
@@ -417,10 +417,8 @@
     </footer>
     <div class="modal_window is-hidden" data-modal>
       <div class="modal_cla">
+        <h3 class="headsecti">Leave your contacts and we will call you back</h3>
         <form class="form-modul">
-          <h3 class="headsecti">
-            Leave your contacts and we will call you back
-          </h3>
           <div class="modal-box">
             <label class="modul-label" for="name-mod">Name</label>
             <div class="modul-div">
