--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       </div>
     </footer>
     <div class="modal_window is-hidden" data-modal>
-      <div class="modal_cla">
+      <div class="modal">
         <h3 class="headsecti">Leave your contacts and we will call you back</h3>
         <form class="form-modul">
           <div class="modal-box">
