--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
     </footer>
     <div class="modal_window is-hidden" data-modal>
       <div class="modal">
-        <h3 class="foot-paragph">
+        <p class="foot-paragph">
           Leave your contacts and we will call you back
-        </h3>
+        </p>
         <form class="form-modul">
           <div class="modal-box">
             <label class="modul-label" for="name-mod">Name</label>
