--- a/index.html
+++ b/index.html
@@ -417,9 +417,7 @@
     </footer>
     <div class="modal_window is-hidden" data-modal>
       <div class="modal">
-        <p class="foot-paragph">
-          Leave your contacts and we will call you back
-        </p>
+        <p class="fparagph">Leave your contacts and we will call you back</p>
         <form class="form-modul">
           <div class="modal-box">
             <label class="modul-label" for="name-mod">Name</label>
