--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <p class="fparagph">Leave your contacts and we will call you back</p>
         <form class="form-modul">
           <div class="modal-box">
-            <label class="modul-label" for="name-mod">Name</label>
+            <label class="modul-label" for="user-name">Name</label>
             <div class="modul-div">
               <input
                 class="modul-input"
