--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 type="text"
                 required
                 name="user-name"
-                id="name-mod"
+                id="user-name"
               />
               <svg class="modul-svg" width="18px" height="18px">
                 <use
