--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="modul-svg" width="18px" height="18px">
+              <svg class="modul-svg" width="18" height="18">
                 <use
                   class="modul-use-svg"
                   href="./images/icons.svg#icon-person-black-18dp-1"
@@ -451,7 +451,7 @@
                 required
                 name="phone-nomber"
               />
-              <svg class="modul-svg" width="18px" height="24px">
+              <svg class="modul-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
@@ -465,7 +465,7 @@
                 required
                 name="email-user"
               />
-              <svg class="modul-svg" width="18px" height="24px">
+              <svg class="modul-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
