--- a/index.html
+++ b/index.html
@@ -449,7 +449,8 @@
                 class="modul-input"
                 type="tel"
                 required
-                name="phone-nomber"
+                name="user-name"
+                id="user-name"
               />
               <svg class="modul-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
