--- a/index.html
+++ b/index.html
@@ -464,7 +464,8 @@
                 class="modul-input"
                 type="email"
                 required
-                name="email-user"
+                name="user-name"
+                id="user-name"
               />
               <svg class="modul-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
@@ -472,9 +473,13 @@
             </div>
           </div>
           <div class="modal-box">
-            <label class="modul-label">Comment</label>
+            <label class="modul-label" for="user-comment">Comment</label>
             <div class="modul-div">
-              <textarea class="area-commet" placeholder="Text input"></textarea>
+              <textarea
+                class="area-commet"
+                id="user-comment"
+                placeholder="Text input"
+              ></textarea>
             </div>
           </div>
           <p class="Modul-comment">
