--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@
             <div class="modul-div">
               <textarea
                 class="area-commet"
+                name="user-comment"
                 id="user-comment"
                 placeholder="Text input"
               ></textarea>
