--- a/index.html
+++ b/index.html
@@ -483,12 +483,13 @@
               ></textarea>
             </div>
           </div>
-          <p class="Modul-comment">
-            <input class="modal-check" type="checkbox" id="check" />
-            I accept the terms and conditions of the
-            <a class="modul-policy" href=""> Privacy Policy</a>
-          </p>
-
+          <div class="bot-fotter-box">
+            <p class="Modul-comment">
+              <input class="modal-check" type="checkbox" id="check" />
+              I accept the terms and conditions of the
+              <a class="modul-policy" href=""> Privacy Policy</a>
+            </p>
+          </div>
           <button type="button" class="first_button" data-modal-open>
             Send
           </button>
