--- a/index.html
+++ b/index.html
@@ -472,16 +472,14 @@
               </svg>
             </div>
           </div>
-          <div class="modal-box">
+          <div class="modal-box-two">
             <label class="modul-label" for="user-comment">Comment</label>
-            <div class="modul-div">
-              <textarea
-                class="area-commet"
-                name="user-comment"
-                id="user-comment"
-                placeholder="Text input"
-              ></textarea>
-            </div>
+            <textarea
+              class="area-commet"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="bot-fotter-box">
             <p class="Modul-comment">
