--- a/index.html
+++ b/index.html
@@ -482,11 +482,18 @@
             ></textarea>
           </div>
           <div class="bot-fotter-box">
-            <p class="Modul-comment">
-              <input class="modal-check" type="checkbox" id="check" />
-              I accept the terms and conditions of the
-              <a class="modul-policy" href=""> Privacy Policy</a>
-            </p>
+            <input
+              class="modal-check visually-hidden"
+              name="user-privacy"
+              value="true"
+              type="checkbox"
+              id="user-privacy"
+            />
+            <label class="Modul-comment" for="user-privacy"
+              >I accept the terms and conditions of the</label
+            >
+            I accept the terms and conditions of the
+            <a class="modul-policy" href=""> Privacy Policy</a>
           </div>
           <button type="button" class="first_button" data-modal-open>
             Send
