--- a/index.html
+++ b/index.html
@@ -489,10 +489,11 @@
               type="checkbox"
               id="user-privacy"
             />
-            <label class="Modul-comment" for="user-privacy"
-              >I accept the terms and conditions of the</label
-            >
-            I accept the terms and conditions of the
+            <label class="modul-comment" for="user-privacy"
+              >I accept the terms and conditions of the<span
+                class="foot-span"
+              ></span
+            ></label>
             <a class="modul-policy" href=""> Privacy Policy</a>
           </div>
           <button type="button" class="first_button" data-modal-open>
