--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
               type="checkbox"
               id="user-privacy"
             />
-            <label class="modul-comment" for="user-privacy"
+            <label class="mod-com" for="user-privacy"
               >I accept the terms and conditions of the<span
                 class="foot-span"
               ></span
