--- a/index.html
+++ b/index.html
@@ -490,13 +490,13 @@
               id="user-privacy"
             />
             <label class="mod-com" for="user-privacy"
-              >I accept the terms and conditions of the<span class="foot-span">
+              ><span class="foot-span">
                 <svg class="modul-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg> </span
-            ></label>
-
-            <a class="modul-policy" href=""> Privacy Policy</a>
+              >I accept the terms and conditions of the
+              <a class="modul-policy" href="">Privacy Policy</a>
+            </label>
           </div>
           <button type="button" class="first_button" data-modal-open>
             Send
