--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
             />
             <label class="mod-com" for="user-privacy"
               ><span class="foot-span">
-                <svg class="modul-svg" width="10" height="8">
+                <svg class="modul-svgd" width="10" height="8">
                   <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg> </span
               >I accept the terms and conditions of the
