--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <label class="mod-com" for="user-privacy"
               ><span class="foot-span">
                 <svg class="modul-svgd" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                  <use href="./images/icons.svg#icon-Property-1click"></use>
                 </svg> </span
               >I accept the terms and conditions of the
               <a class="modul-policy" href="">Privacy Policy</a>
