--- a/portfolio.html
+++ b/portfolio.html
@@ -292,6 +292,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-input-box">
+          <p class="par_foot">Subscribe</p>
+
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="ustal"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-button">
+              Subscribe
+              <svg class="footer-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
