--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 class="modul-input"
                 type="tel"
                 required
-                name="user-name"
+                name="us-name"
                 id="user-name"
               />
               <svg class="modul-svg" width="18" height="24">
@@ -464,7 +464,7 @@
                 class="modul-input"
                 type="email"
                 required
-                name="user-name"
+                name="us-name-two"
                 id="user-name"
               />
               <svg class="modul-svg" width="18" height="24">
