--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 class="modul-input"
                 type="text"
                 required
-                name="user-name"
+                name="uname"
                 id="user-name"
               />
               <svg class="modul-svg" width="18" height="24">
@@ -449,8 +449,8 @@
                 class="modul-input"
                 type="tel"
                 required
-                name="us-name"
-                id="user-name"
+                name="namee"
+                id="user-name-two"
               />
               <svg class="modul-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
