--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 class="modul-input"
                 type="text"
                 required
-                name="uname"
+                name="user-name"
                 id="user-name"
               />
               <svg class="modul-svg" width="18" height="24">
